<resources>
    <string name="app_name">Weatherium</string>
    <string name="today">Today</string>
    <string name="future_days">7 Days</string>
    <string name="settings">Settings</string>
    <string name="loading_title">Loading</string>
    <string name="weather_location">Weather Location</string>
    <string name="use_device_location">Use device location</string>
    <string name="use_device_location_describe">Allow the app to get your location</string>
    <string name="Location">custom_location_title</string>
    <string name="custom_location_summary">The location is for weather is</string>
    <string name="next_7days">Next 7 days</string>
</resources>
